# ralph-gold

./: .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .mise.toml  .vale.ini  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERT_IMPLEMENTATION.md  FIXES.md  Makefile  README.md  SECURITY.md  SUPPORT.md  converters_head.py  harness.contract.json  memory.json  prek.toml  pyproject.toml  test_make_tracker_yaml.py
.agent/: FEATURE_IMPLEMENTATION_PLAN.md  PLANS.archive-2026-01-23.md  PLANS.md  PLANS.md.bak.20260212-224010
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.ralph/: AGENTS.md  COMPLETION_SUMMARY.md  DEBUG_PLANNING_BUG.md  GOLD_STANDARD_FIXES.md  PRD.md  PROMPT.md  PROMPT_build.md  TROUBLESHOOTING.md  prd.json  progress.md  ralph.toml  state.json
.spec/: CODEBASE_REVIEW_FIXES.md  FEATURE_CREEP_COMPLIANCE.md  PHASE1_QUICK_WINS.md  SECOND_ORDER_REVIEW.md  SOLO_DEV_IMPLEMENTATION_PLAN.md  TASK_STANDARDS.md  THIRD_ORDER_REVIEW.md  UX_IMPROVEMENTS_REVIEW.md  adr-0001-exit-signal-logic-v3.md  adr-0002-task-state-reporting.md  authorization-configurable-enforcement.md  backend-design-agent-effectiveness-improvements.md  build-plan-2026-01-23-ralph-gold-prd.md  foundation-2026-01-23-ralph-gold-prd-api-spec-qa-cases.md  foundation-2026-01-23-ralph-gold-prd-api-spec-test-harness.md  foundation-2026-01-23-ralph-gold-prd-api-spec.md  foundation-2026-01-23-ralph-gold-prd-arch-spec.md  foundation-2026-01-23-ralph-gold-prd-qa-cases.md  foundation-2026-01-23-ralph-gold-prd.md  path-validation-audit-2026-01-20.md  path-validation-security-posture.md  spec-2026-01-19-critical-bug-fixes-v3.md  spec-2026-01-20-security-enhancements-resolution.md  spec-2026-01-20-security-enhancements-revised.md  spec-2026-01-20-security-final-review.md  ux-2026-01-23-ralph-gold-prd.md
brand/: README.md  constraints.md
docs/: AUTHORIZATION.md  COMMANDS.md  CONFIGURATION.md  EVIDENCE.md  FEEDBACK_LOOPS.md  GOLDEN_LOOP.md  INIT_ARCHIVING.md  MIGRATION_v0.5_to_v0.6.md  MIGRATION_v0.7_to_v0.8.md  NEW_FEATURES.md  PARALLEL_CONFIG.md  PARALLEL_CONFIG_EXAMPLE.toml  PROGRESS.md  PROJECT_STRUCTURE.md  QUALITY_SCORE.md  SIMPLE_EXPERT_MODE.md  TASK-13.1-SUMMARY.md  TASK-2.4-SUMMARY.md  TROUBLESHOOTING.md  VSCODE_BRIDGE_PROTOCOL.md  YAML_TRACKER.md  configuration-phase2.md  github-tracker-config-example.toml  interactive_selection.md
scripts/: check-environment.sh  check_version_sync.py  codex-preflight.sh  harness  install.ps1  install.sh  setup-git-hooks.js  tooling_contract.py  unblock-tasks.ps1  unblock-tasks.sh  verify-work.sh
tests/: conftest.py  test_agents_claude_variants.py  test_agents_generic_stdin.py  test_all_blocked.py  test_authorization.py  test_clean.py  test_cli_diagnose.py  test_cli_explain.py  test_cli_harness.py  test_cli_interactive.py  test_cli_json_contract.py  test_cli_json_maintenance.py  test_cli_mode.py  test_cli_quickstart.py  test_cli_stats.py  test_cli_status.py  test_cli_sync.py  test_cli_templates.py  test_cli_unblock.py  test_cli_watch.py  test_completion.py  test_config.py  test_dry_run.py  (+65 more)
(+1145 files in other folders)
