[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-gold"
dynamic = ["version"]
description = "Golden Ralph Loop orchestrator for Codex, Claude Code, and Copilot (uv-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jamie (local install template)" }]
dependencies = [
  "pyyaml>=6.0.3,<7.0.0",
  "requests>=2.31.0,<3.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "aiohttp>=3.13.5,<4.0.0",
  "tomli; python_version < '3.11'",
  "windows-curses; platform_system == 'Windows'",
]

[project.scripts]
ralph = "ralph_gold.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_gold"]
include = ["src/ralph_gold/templates/**"]

[tool.hatch.version]
path = "src/ralph_gold/__init__.py"

[dependency-groups]
dev = [
  "hypothesis>=6.151.12,<7.0.0",
  "pytest>=7.4.0,<10.0.0",
]

# Optional dependencies for enhanced web analysis capabilities
web-headless = [
  "playwright>=1.40.0,<2.0.0",
]

[tool.uv]
default-groups = ["dev"]
